[gd_scene load_steps=13 format=3 uid="uid://c3b57t6oxwavu"]

[ext_resource type="Script" path="res://Scripts/PopupSetSize.gd" id="1_s634o"]
[ext_resource type="Script" path="res://Scripts/Popup.gd" id="1_vpiaa"]
[ext_resource type="FontFile" uid="uid://ccnslr75308d7" path="res://Fonts/ChakraPetch-Bold.ttf" id="2_ac1vq"]
[ext_resource type="FontFile" uid="uid://dnvf2ybp7jptv" path="res://Fonts/ChakraPetch-Regular.ttf" id="4_q7lmk"]
[ext_resource type="Texture2D" uid="uid://do6pgwtjfvuho" path="res://Graphics/Info Signs/xbox-jump.png" id="5_2vti5"]
[ext_resource type="AudioStream" uid="uid://c3x801gp472xu" path="res://Sounds/alert.wav" id="6_t8rmp"]

[sub_resource type="LabelSettings" id="LabelSettings_0m6ja"]
font = ExtResource("2_ac1vq")
font_size = 42
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_q52b7"]
font = ExtResource("4_q7lmk")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tug7x"]
bg_color = Color(0.937255, 0.443137, 1, 0.564706)

[sub_resource type="Animation" id="Animation_i35mi"]
resource_name = "show"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/TitleBar:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/MessageContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.305882), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background/CloseButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1kvyp"]
resource_name = "hide"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.7, 0.7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oehfj"]
_data = {
"hide": SubResource("Animation_1kvyp"),
"show": SubResource("Animation_i35mi")
}

[node name="Popup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vpiaa")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 564.0
offset_top = 307.0
offset_right = -564.0
offset_bottom = -307.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9225, 0.9225)
pivot_offset = Vector2(396, 233)
color = Color(0.807843, 0.784314, 1, 0.870588)
script = ExtResource("1_s634o")

[node name="TitleBar" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 76.0
grow_horizontal = 2
color = Color(0.774409, 0.611868, 1, 0.784314)

[node name="Title" type="Label" parent="Background/TitleBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Title"
label_settings = SubResource("LabelSettings_0m6ja")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -387.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="Background/MessageContainer"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
size_flags_vertical = 1
text = "Body text body text body text.
The body text keeps growing."
label_settings = SubResource("LabelSettings_q52b7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CloseButton" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -84.0
offset_right = -19.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = -50
theme_override_constants/icon_max_width = 61
theme_override_fonts/font = ExtResource("2_ac1vq")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_tug7x")
text = "OK"
icon = ExtResource("5_2vti5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_oehfj")
}

[node name="AlertSound" type="AudioStreamPlayer" parent="Background"]
stream = ExtResource("6_t8rmp")

[connection signal="pressed" from="Background/CloseButton" to="." method="_on_close_button_pressed"]
